--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </div>
       </div>
     </section>
+    <h1>FOOTER</h1>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
